[metadata]
name = pyraylib
version = 1.0.2
description = A Python binding for the great C library raylib.
long_description = file: README.md
url = https://github.com/Ho011/pyraylib
author = Hussein Sarea
author_email = zzzsssx0@gmail.com
license = MIT License
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Games/Entertainment
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = true
packages = find:
python_requires = >=3.6